<resources>
    <string name="app_name">FoodScanner</string>
    <string name="camera">Camera</string>
    <string name="filter">Filter</string>
    <string name="product_name">Product Name:</string>
    <string name="expiry_dates">Expiry Dates:</string>
    <string name="totalsum">Total:</string>
    <string name="placeholder">Placeholder</string>
    <string name="name_of_product">Name of Product:</string>
    <string name="enter_product_name">Enter Product Name</string>
    <string name="barcode_number">Barcode Number:</string>
    <string name="bar_Instruction_txt">Please enter the Product Name corresponding to the Barcode Scanned.</string>
    <string name="submit">Submit</string>
    <string name="enter_barcode_number">Enter Barcode Number</string>
    <string name="quantity">Quantity:</string>
    <string name="settings">Settings</string>
    <string name="one">1</string>
    <string name="expiry_date_scanned">Expiry Date Scanned</string>
    <string name="brand_name">Brand Name:</string>
    <string name="name_of_brand">Name of Brand:</string>
    <string name="enter_brand_name">Enter Brand Name</string>
</resources>